# mujoco_openarm_tests

./: .gitignore  .gitmodules  README.md  collect_act_dataset.py  inspect_act_dataset.py  pyproject.toml  requirements.txt  run_ik_policy.py  run_replay_policy.py  view_wrist_cameras.py
act/detr/: main.py
act/detr/models/: backbone.py  detr_vae.py
ml/act/: model.py  train.py
openarm_env/: __init__.py  envs.py  ik_policy.py  joint_controller.py
openarm_env/common/: __init__.py  ik.py  joint_controller.py
openarm_env/pick_place/: __init__.py  envs.py  policies.py
openarm_env/reach/: __init__.py  envs.py  policies.py
openarm_mujoco/.github/ISSUE_TEMPLATE/: config.yml
openarm_mujoco/v1/: openarm_bimanual.xml  openarm_bimanual_pick_place_scene.xml  openarm_bimanual_reach_scene.xml  openarm_reach_scene.xml  scene.xml
scripts/: setup.sh
